--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <a href="/" class="text-2xl font-bold text-green-700">Organic Ellie</a>
     <nav class="space-x-6">
       <a href="/" class="text-gray-600 hover:text-green-600">Home</a>
-      <a href="/our-story.html" class="text-gray-600 hover:text-green-600">Our Story</a>
+      <a href="/our-story/" class="text-gray-600 hover:text-green-600">Our Story</a>
       <a href="/blog/" class="text-gray-600 hover:text-green-600">Blog</a>
       <a href="https://organicellie.shop" class="text-gray-600 hover:text-green-600">Shop</a>
     </nav>
